--- a/config/waybar/wallust/colors-waybar.css
+++ b/config/waybar/wallust/colors-waybar.css
@@ -1,23 +1,23 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
-@define-color foreground #ACF2F1;
-@define-color background rgba(30,21,22,0.25);
-@define-color cursor #ACF2F1;
+@define-color foreground #C9D3D5;
+@define-color background rgba(44,43,40,0.25);
+@define-color cursor #C9D3D5;
 
-@define-color color0 #463C3D;
-@define-color color1 #181916;
-@define-color color2 #073122;
-@define-color color3 #073122;
-@define-color color4 #0E455E;
-@define-color color5 #0D942F;
-@define-color color6 #0DA4A1;
-@define-color color7 #80E4E2;
-@define-color color8 #59A09E;
-@define-color color9 #20211D;
-@define-color color10 #09422D;
-@define-color color11 #09422D;
-@define-color color12 #135C7D;
-@define-color color13 #11C63F;
-@define-color color14 #11DAD6;
-@define-color color15 #80E4E2;
+@define-color color0 #51504D;
+@define-color color1 #222116;
+@define-color color2 #262E29;
+@define-color color3 #2F545B;
+@define-color color4 #5F4D3E;
+@define-color color5 #30575F;
+@define-color color6 #4B6166;
+@define-color color7 #A9B8BB;
+@define-color color8 #768083;
+@define-color color9 #2E2B1E;
+@define-color color10 #323E36;
+@define-color color11 #3F6F79;
+@define-color color12 #7F6753;
+@define-color color13 #40747F;
+@define-color color14 #648188;
+@define-color color15 #A9B8BB;
