--- a/config/waybar/style/[Wallust] Chroma Tally.css
+++ b/config/waybar/style/[Wallust] Chroma Tally.css
@@ -22,7 +22,7 @@ window#waybar {
 
 #workspaces {
 	background: transparent;
-	padding: 2px;
+	padding: 0px 1px;
 	border-radius: 15px;
 	border: 0px;
 	font-style: normal;
@@ -101,7 +101,6 @@ tooltip {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -247,7 +246,6 @@ tooltip {
 	color:#d08770;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -257,15 +255,35 @@ tooltip {
 	box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
 	min-width: 80px;
 	min-height: 5px;
 	border-radius: 5px;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
 	min-height: 10px;
 	border-radius: 5px;
 }
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
+	border-radius: 5px;
+}
+
+
