--- a/config/waybar/style/[Catppuccin] Mocha.css
+++ b/config/waybar/style/[Catppuccin] Mocha.css
@@ -83,10 +83,15 @@ window#waybar.empty #window {
 	padding-right: 4px;
 	padding-left: 4px;
 	border-radius: 10px;
+
 } 
 
 .modules-left, .modules-right {
   	border: 1px solid @blue;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
 } 
 
 #backlight,
@@ -124,7 +129,6 @@ window#waybar.empty #window {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -271,8 +275,6 @@ window#waybar.empty #window {
   background-color: @surface0;
   color: @text;
 }
-
-#backlight-slider slider,
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -282,15 +284,33 @@ window#waybar.empty #window {
 	box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
 	min-width: 80px;
 	min-height: 5px;
 	border-radius: 5px;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
 	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
 	border-radius: 5px;
 }
