--- a/config/waybar/style/[Colorful] Aurora Blossom.css
+++ b/config/waybar/style/[Colorful] Aurora Blossom.css
@@ -32,8 +32,6 @@ tooltip label{
 }
 
 /*-----module groups----*/
-.modules-left,
-.modules-center,
 .modules-right {
     background-image: linear-gradient(45deg, #7287fd 10%, #209fb5 54%, #8839ef 90%);
 	color: black;
@@ -43,10 +41,25 @@ tooltip label{
 	padding-right: 4px;
 	padding-left: 4px;
 }
-
+.modules-center {
+    background-image: linear-gradient(0deg, #7287fd 10%, #209fb5 54%, #8839ef 90%);
+	color: black;
+	border-radius: 6px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
+}
+.modules-left {
+    background-image: linear-gradient(225deg, #7287fd 10%, #209fb5 54%, #8839ef 90%);
+	color: black;
+	border-radius: 6px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
+}
 /*-----modules indv----*/
-
-#taskbar button,
 #workspaces button {
 	color: black;
     box-shadow: none;
@@ -58,8 +71,6 @@ tooltip label{
     animation: gradient_f 20s ease-in infinite;
     transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
 }
-
-#taskbar button:hover,
 #workspaces button:hover {
 	color: grey;
 	background-color: rgba(0,153,153,0.2);
@@ -69,7 +80,6 @@ tooltip label{
     transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
 
-#taskbar button.active,
 #workspaces button.active {
 	color: grey;
     padding-left: 8px;
@@ -117,7 +127,6 @@ tooltip label{
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -172,7 +181,24 @@ tooltip label{
 	animation-direction: alternate;
 }
 
-#backlight-slider slider,
+#taskbar button.active {
+	color: black;
+	background-color: #7f849c;
+    padding-left: 6px;
+    padding-right: 6px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#taskbar button,
+#taskbar button:hover {
+	color:	black;
+    padding-left: 2px;
+    padding-right: 2px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -182,7 +208,6 @@ tooltip label{
 	box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
 	background-color: #7f849c;
 	min-width: 80px;
@@ -190,7 +215,27 @@ tooltip label{
 	border-radius: 5px;
 }
 
-#pulseaudio-slider highlight,
+#pulseaudio-slider highlight {
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	background-color: #7f849c;
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
 #backlight-slider highlight {
 	min-width: 10px;
 	border-radius: 5px;
