--- a/config/waybar/style/[Colorful] Aurora.css
+++ b/config/waybar/style/[Colorful] Aurora.css
@@ -28,15 +28,24 @@ tooltip label{
 	color: black;
 }
 /*-----module groups----*/
-.modules-left,
-.modules-center,
 .modules-right {
 	padding-top: 2px;
 	padding-bottom: 2px;
 	padding-right: 4px;
 	padding-left: 4px;
 }
-
+.modules-center {
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
+}
+.modules-left {
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
+}
 /*-----modules indv----*/
 #taskbar button,
 #workspaces button {
@@ -106,7 +115,6 @@ tooltip label{
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -180,7 +188,6 @@ tooltip label{
 	animation-direction: alternate;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -190,7 +197,6 @@ tooltip label{
 	box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
 	background-color: #7f849c;
 	min-width: 80px;
@@ -198,8 +204,28 @@ tooltip label{
 	border-radius: 5px;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
 	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	background-color: #7f849c;
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
 	border-radius: 5px;
 }
