--- a/config/waybar/style/[Dark] Golden Noir.css
+++ b/config/waybar/style/[Dark] Golden Noir.css
@@ -22,6 +22,13 @@ window#waybar.hidden {
     opacity: 0.5;
 }
 
+window#waybar.empty,
+window#waybar.empty #window {
+    padding: 0px;
+    border: 0px;
+    background-color: transparent;
+}
+
 tooltip {
     background: #1e1e2e;
     border-radius: 10px;
@@ -32,7 +39,6 @@ tooltip {
 }
 
 /*-----module groups----*/
-.modules-left,
 .modules-right {
 	padding-top: 2px;
 	padding-bottom: 2px;
@@ -51,7 +57,13 @@ tooltip {
 	padding-left: 4px;
 }
 
-#taskbar button,
+.modules-left {
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 4px;
+	padding-left: 4px;
+}
+
 #workspaces button {
     color: #6E6A86;
     box-shadow: none;
@@ -129,7 +141,6 @@ tooltip {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -180,7 +191,6 @@ tooltip {
 	animation-direction: alternate;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
     min-width: 0px;
     min-height: 0px;
@@ -190,7 +200,6 @@ tooltip {
     box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
     min-width: 80px;
     min-height: 5px;
@@ -198,9 +207,30 @@ tooltip {
     background-color: #22252a;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
     min-height: 10px;
+    border-radius: 5px;
+    background-color: #ba5663;
+}
+
+#backlight-slider slider {
+    min-width: 0px;
+    min-height: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+
+#backlight-slider trough {
+    min-width: 80px;
+    min-height: 10px;
+    border-radius: 5px;
+    background-color: #22252a;
+}
+
+#backlight-slider highlight {
+    min-width: 10px;
     border-radius: 5px;
     background-color: #ba5663;
 }
