--- a/config/waybar/style/[Dark] Latte-Wallust combined v2.css
+++ b/config/waybar/style/[Dark] Latte-Wallust combined v2.css
@@ -54,9 +54,7 @@ tooltip {
     font-weight: bold;
     font-style: normal;
     opacity: 0.8;
-}
-
-#taskbar button,   
+}   
 #workspaces button {
     color: @foreground;
     box-shadow: none;
@@ -68,7 +66,6 @@ tooltip {
     transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
 }
 
-#taskbar button.active,
 #workspaces button.active {
     color: #ffd700;
     border-radius: 50%;
@@ -89,7 +86,6 @@ tooltip {
     border-radius: 10px;
 }
 
-#taskbar button:hover,
 #workspaces button:hover {
     color: #ffd700;
     border-radius: 10px;
@@ -99,11 +95,14 @@ tooltip {
     transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
 
+#clock#2 {
+    color: #efe8f7;
+}
+
 /*-----module groups----*/
 .modules-center {
     background-color: @background-module2;
     border-radius: 10px;
-    padding: 4px;
 	border-bottom: 2px solid @border-color;
 	border-right: 1px solid @button-hover;
 	border-left: 1px solid @button-hover;
@@ -143,7 +142,6 @@ tooltip {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -177,7 +175,21 @@ tooltip {
     }
 }
 
-#backlight-slider slider,
+#taskbar button.active {
+    background-color: rgb(47, 46, 46);
+    padding-left: 12px;
+    padding-right: 12px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#taskbar button:hover {
+    padding-left: 3px;
+    padding-right: 3px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
 #pulseaudio-slider slider {
     min-width: 0px;
     min-height: 0px;
@@ -187,7 +199,6 @@ tooltip {
     box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
     min-width: 80px;
     min-height: 5px;
@@ -195,13 +206,33 @@ tooltip {
     background-color: #22252a;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
     min-height: 10px;
     border-radius: 5px;
     background-color: #ba5663;
 }
 
+#backlight-slider slider {
+    min-width: 0px;
+    min-height: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+
+#backlight-slider trough {
+    min-width: 80px;
+    min-height: 10px;
+    border-radius: 5px;
+    background-color: #22252a;
+}
+
+#backlight-slider highlight {
+    min-width: 10px;
+    border-radius: 5px;
+    background-color: #ba5663;
+}
 #pulseaudio-slider,
 #pulseaudio {
 	color: @color13;
@@ -240,6 +271,45 @@ tooltip {
 	animation-direction: alternate;
 }
 
+#pulseaudio-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#pulseaudio-slider trough {
+	min-width: 80px;
+	min-height: 5px;
+	border-radius: 5px;
+}
+
+#pulseaudio-slider highlight {
+	min-height: 10px;
+	border-radius: 5px;
+}
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
+	border-radius: 5px;
+}
+
 #custom-hypridle,
 #custom-lock,
 #idle_inhibitor {
@@ -253,10 +323,9 @@ tooltip {
 }
 
 #clock {
-	color: @foreground;
+	color: @sapphire;
     border-radius: 15px;
 }
-
 #custom-updates {
     color: @yellow;
 }
