--- a/config/waybar/style/[Dark] Purpl.css
+++ b/config/waybar/style/[Dark] Purpl.css
@@ -20,6 +20,13 @@ window#waybar.hidden {
 	opacity: 0.5;
 }
 
+window#waybar.empty,
+window#waybar.empty #window {
+	padding: 0px;
+	border: 0px;
+	background-color: transparent;
+}
+
 tooltip {
 	background: #1e1e2e;
 	border-radius: 10px;
@@ -36,8 +43,8 @@ tooltip {
 	background-color: #3d174b;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	padding-right: 5px;
-	padding-left: 5px;
+	padding-right: 4px;
+	padding-left: 4px;
 }
 
 .modules-center {
@@ -54,11 +61,10 @@ tooltip {
 	background-color: #441a53;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	padding-right: 5px;
-	padding-left: 5px;
+	padding-right: 4px;
+	padding-left: 4px;
 }
 
-#taskbar button,
 #workspaces button {
 	color: #6E6A86;
     box-shadow: none;
@@ -73,7 +79,7 @@ tooltip {
 
 #workspaces button.active {
 	color: #cba6f7;
-	border-radius: 20%;
+	border-radius: 50%;
 	background-color: black;
     padding-left: 8px;
     padding-right: 8px;
@@ -133,7 +139,6 @@ tooltip {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -199,7 +204,6 @@ tooltip {
 	animation-direction: alternate;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -209,7 +213,6 @@ tooltip {
 	box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
 	min-width: 80px;
 	min-height: 5px;
@@ -217,9 +220,30 @@ tooltip {
 	background-color: #6E6A86;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
 	min-height: 10px;
+	border-radius: 5px;
+	background-color: purple;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+	background-color: #6E6A86;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
 	border-radius: 5px;
 	background-color: purple;
 }
