--- a/config/waybar/style/[Extra] EverForest.css
+++ b/config/waybar/style/[Extra] EverForest.css
@@ -60,6 +60,11 @@ window#waybar.hidden {
   background-color: @bg0;
 }
 
+window#waybar.empty,
+window#waybar.empty #window {
+  background: none;
+}
+
 .modules-left button:first-child {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -81,8 +86,6 @@ window#waybar.hidden {
 #custom-swaync {
   color: @yellow;
 }
-
-#taskbar button,
 #workspaces button {
   padding: 0px 5px;
   background-color: @orange;
@@ -238,29 +241,48 @@ window#waybar.hidden {
   background-color: @aqua;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
-    min-width: 0px;
-    min-height: 0px;
-    opacity: 0;
-    background-image: none;
-    border: none;
-    box-shadow: none;
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
 }
-
-#backlight-slider trough,
+	
 #pulseaudio-slider trough {
-    min-width: 80px;
-    min-height: 5px;
-    border-radius: 5px;
-    background-color: #22252a;
+	min-width: 80px;  
+	min-height: 5px; 
+	border-radius: 5px;
+	background-color: #22252a;
+}
+	
+#pulseaudio-slider highlight {
+	min-height: 10px; 
+	border-radius: 5px;
+	background-color: #ba5663;
 }
 
-#backlight-slider highlight,
-#pulseaudio-slider highlight {
-    min-height: 10px;
-    border-radius: 5px;
-    background-color: #ba5663;
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+	
+#backlight-slider trough {
+	min-width: 80px;  
+	min-height: 10px; 
+	border-radius: 5px;
+	background-color: #22252a;
+}
+	
+#backlight-slider highlight {
+	min-width: 10px; 
+	border-radius: 5px;
+	background-color: #ba5663;
 }
 
 #backlight,
@@ -297,7 +319,6 @@ window#waybar.hidden {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
