--- a/config/waybar/style/[Retro] Simple Style.css
+++ b/config/waybar/style/[Retro] Simple Style.css
@@ -79,7 +79,6 @@ window#waybar {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -98,8 +97,8 @@ window#waybar {
 #custom-weather.showyIcyDay,
 #custom-weather.snowyIcyNight,
 #custom-weather.sunnyDay {
-  padding: 6px;
   color: @foreground;
+  padding: 3px 6px 3px 6px;
 }
 
 #battery.warning,
@@ -150,7 +149,6 @@ window#waybar {
   border-bottom: 3px solid green;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -159,18 +157,38 @@ window#waybar {
 	border: none;
 	box-shadow: none;
 }
-
-#backlight-slider trough,
+	
 #pulseaudio-slider trough {
 	min-width: 80px;  
 	min-height: 5px; 
 	border-radius: 5px;
 	background-color: @dim;
 }
-
-#backlight-slider highlight,
+	
 #pulseaudio-slider highlight {
 	min-height: 10px; 
+	border-radius: 5px;
+	background-color: @green;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+	
+#backlight-slider trough {
+	min-width: 80px;  
+	min-height: 10px; 
+	border-radius: 5px;
+	background-color: @dim;
+}
+	
+#backlight-slider highlight {
+	min-width: 10px; 
 	border-radius: 5px;
 	background-color: @green;
 }
