--- a/config/waybar/style/[Wallust Bordered] Chroma Fusion Edge.css
+++ b/config/waybar/style/[Wallust Bordered] Chroma Fusion Edge.css
@@ -89,7 +89,6 @@ tooltip {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
 #custom-power_vertical,
 #custom-power,
 #custom-settings,
@@ -197,7 +196,6 @@ tooltip {
     
 }
 
-#taskbar button,
 #workspaces button {
     border-radius: 15px;
     border:0px;
@@ -209,7 +207,6 @@ tooltip {
     opacity:0.8;
 }
 
-#taskbar button.active,
 #workspaces button.active {
     color: #FFFFFF;
     background: @button-color;
@@ -226,7 +223,6 @@ tooltip {
     opacity:1.0;
 }
 
-#taskbar button:hover,
 #workspaces button:hover {
     color: #FFFFFF;
     background: @button-hover;
@@ -273,6 +269,21 @@ tooltip {
     }
 }
 
+#taskbar button.active {
+    background-color: rgb(47, 46, 46);
+	border-radius: 30px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
+#taskbar button:hover {
+    padding-left: 3px;
+    padding-right: 3px;
+	border-radius: 15px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+
 #battery.critical:not(.charging) {
 	color: #f53c3c;
 	animation-name: blink;
@@ -282,7 +293,6 @@ tooltip {
 	animation-direction: alternate;
 }
 
-#backlight-slider slider,
 #pulseaudio-slider slider {
 	min-width: 0px;
 	min-height: 0px;
@@ -292,16 +302,34 @@ tooltip {
 	box-shadow: none;
 }
 
-#backlight-slider trough,
 #pulseaudio-slider trough {
 	min-width: 80px;
 	min-height: 5px;
 	border-radius: 5px;
 }
 
-#backlight-slider highlight,
 #pulseaudio-slider highlight {
 	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#backlight-slider trough {
+	min-width: 80px;
+	min-height: 10px;
+	border-radius: 5px;
+}
+
+#backlight-slider highlight {
+	min-width: 10px;
 	border-radius: 5px;
 }
 
