--- a/config/wlogout/style copy.css
+++ b/config/wlogout/style copy.css
@@ -4,53 +4,39 @@
 /* Importing wallust colors */
 @import '../../.config/waybar/wallust/colors-waybar.css';
 
-* {
-    background-image: none;
-    font-size: 12pt;
-}
-
 window {
     font-family: General Sans;
-    font-weight: 500;
-    /* font-size: 12px; */
+    font-size: 16pt;
     color: #cdd6f4;
     /* text */
-    background-image: url("../../.config/hypr/wallpaper_effects/.wallpaper_modified");
-    background-size: cover;
-    /* background-color: rgba(30, 30, 46, 0.75); */
+    background-color: rgba(30, 30, 46, 0.75);
 }
 
 button {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 20%;
-    background-color: rgba(30, 30, 46, 0.9);
-    animation: gradient_f 20s ease-in infinite;
-    /* transition: all 0.2s cubic-bezier(.55, 0.0, .28, 1.682), border-radius 0.1s linear; */
-    border-radius: 0px;
-    outline-style: none;
-    border: none;
-    border-width: 0px;
+    background-color: rgba(200, 220, 255, 0);
+    animation: gradient_f 10s ease-in infinite;
+    transition: all 0.2s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    border-radius: 50px;
+    border: 0px;
     min-width: 100px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    box-shadow: none;
-    text-shadow: none;
 }
 
 button:focus {
-    background-color: rgba(255, 255, 255, 0.33);
+    background-size: 50%;
     border: 0px;
 }
 
 button:hover {
-    background-color: rgba(255, 255, 255, 0.33);
-    color: rgba(30, 30, 46, 0.75);
-    background-size: 30%;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    /* background-color: @color12;  */
+    background-color: rgba(30, 30, 46, 0.75);
+    color: #cdd6f4;
+    background-size: 50%;
+    margin: 30px;
     border-radius: 15px;
-    transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682);
+    box-shadow: 0 0 30px @color7;
 }
 
 /* Adjust the size of the icon or content inside the button */
@@ -61,13 +47,8 @@ button span {
 
 
 #lock {
-    /* background-color: rgba(255, 255, 255, 0.33); */
     background-image: image(url("./icons/lock.png"));
-    border-radius: 15px 0px 0px 15px;
-}
 
-#lock:hover {
-    border-radius: 15px;
 }
 
 /* #lock:hover {
@@ -76,7 +57,6 @@ button span {
 
 #logout {
     background-image: image(url("./icons/logout.png"));
-    /* border-radius: 0px 0px 0px 0px; */
 }
 
 /* #logout:hover {
@@ -85,7 +65,6 @@ button span {
 
 #suspend {
     background-image: image(url("./icons/hibernate.png"));
-    /* border-radius: 0px 0px 0px 0px; */
 }
 
 /* #suspend:hover {
@@ -94,7 +73,6 @@ button span {
 
 #shutdown {
     background-image: image(url("./icons/shutdown.png"));
-    /* border-radius: 0px 0px 0px 0px; */
 }
 
 /* #shutdown:hover {
@@ -103,8 +81,6 @@ button span {
 
 #reboot {
     background-image: image(url("./icons/reboot.png"));
-    /* border-radius: 0px 0px 0px 0px; */
-
 }
 
 /* #reboot:hover {
@@ -113,11 +89,6 @@ button span {
 
 #hibernate {
     background-image: image(url("./icons/suspend.png"));
-    border-radius: 0px 15px 15px 0px;
-}
-
-#hibernate:hover {
-    border-radius: 15px;
 }
 
 /* #hibernate:hover {
