--- a/config/wlogout/style.css
+++ b/config/wlogout/style.css
@@ -23,7 +23,7 @@ window {
 button {
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 20%;
+    background-size: 25%;
     background-color: rgba(30, 30, 46, 0.9);
     animation: gradient_f 20s ease-in infinite;
     /* transition: all 0.2s cubic-bezier(.55, 0.0, .28, 1.682), border-radius 0.1s linear; */
@@ -45,8 +45,8 @@ button:focus {
 
 button:hover {
     background-color: rgba(255, 255, 255, 0.33);
-    color: rgba(30, 30, 46, 0.75);
-    background-size: 30%;
+    color: #ffffff;
+    background-size: 35%;
     margin-top: 0px;
     margin-bottom: 0px;
     border-radius: 15px;
@@ -59,14 +59,18 @@ button span {
     /* Increase the font size */
 }
 
+button label {
+    font-size: 0.9em;
+}
 
 #lock {
     /* background-color: rgba(255, 255, 255, 0.33); */
-    background-image: image(url("./icons/lock.png"));
+    background-image: image(url("./icons/Lock.svg"));
     border-radius: 15px 0px 0px 15px;
 }
 
 #lock:hover {
+    /* background-image: image(url("./icons/Lock-dark.svg")); */
     border-radius: 15px;
 }
 
@@ -75,7 +79,7 @@ button span {
 } */
 
 #logout {
-    background-image: image(url("./icons/logout.png"));
+    background-image: image(url("./icons/Logout.svg"));
     /* border-radius: 0px 0px 0px 0px; */
 }
 
@@ -84,40 +88,42 @@ button span {
 } */
 
 #suspend {
-    background-image: image(url("./icons/hibernate.png"));
+    background-image: image(url("./icons/Suspend.svg"));
     /* border-radius: 0px 0px 0px 0px; */
 }
 
 /* #suspend:hover {
-    background-image: image(url("./icons/sleep-hover.png"));
+    background-image: image(url("./icons/Suspend-dark.svg"));
 } */
 
 #shutdown {
-    background-image: image(url("./icons/shutdown.png"));
+    background-image: image(url("./icons/Shutdown.svg"));
     /* border-radius: 0px 0px 0px 0px; */
 }
 
 /* #shutdown:hover {
-    background-image: image(url("./icons/power-hover.png"));
+    background-image: image(url("./icons/Shutdown-dark.svg"));
 } */
 
 #reboot {
-    background-image: image(url("./icons/reboot.png"));
+    background-image: image(url("./icons/Reboot.svg"));
     /* border-radius: 0px 0px 0px 0px; */
 
 }
 
 /* #reboot:hover {
-    background-image: image(url("./icons/restart-hover.png"));
+    background-image: image(url("./icons/Reboot-dark.svg"));
 } */
 
 #hibernate {
-    background-image: image(url("./icons/suspend.png"));
+    background-image: image(url("./icons/Hibernate.svg"));
     border-radius: 0px 15px 15px 0px;
 }
 
 #hibernate:hover {
+    background-image: image(url("./icons/Hibernate-dark.svg"));
     border-radius: 15px;
+    color: rgba(30, 30, 46, 0.75);
 }
 
 /* #hibernate:hover {
